--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,14 @@
   font-family: Arial, Helvetica, sans-serif;
   color: hsl(0, 0%, 30%);
 }
+
+.student {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+.studnet p {
+  margin: 0;
+}
