--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Arial, sans-serif;
+}
+
 .card {
   border: 1px solid black;
   border-radius: 10px;
@@ -65,4 +69,47 @@
 .counter-button:hover {
   background-color: hsl(265, 94%, 20%);
   ;
+}
+
+.color-picker-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.color-h1 {
+  margin: 50px;
+  font-size: 3rem;
+}
+
+.color-display {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid hsl(0, 0%, 100%);
+  border-radius: 25px;
+  margin-bottom: 25px;
+  transition: 0.5s ease;
+}
+
+.color_display p {
+  color: hsl(0, 0%, 20%);
+  font-size: 2 rem;
+  text-align: center;
+}
+
+.color-picker-label {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.color-input {
+  width: 75px;
+  height: 50px;
+  padding: 5px;
+  border-radius: 10px;
+  border: 3px solid hsl(0, 0%, 80%);
 }
